Updates to the UI and general refactoring (supporting WPF). Added wrapper functions for forecast analytics.

--- a/RScriptAddIn/RScriptAddIn/Properties/Settings.settings
+++ b/RScriptAddIn/RScriptAddIn/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="R_PATH" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="packages" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
