--- a/ExcelRAddIn/ExcelRAddIn/App.config
+++ b/ExcelRAddIn/ExcelRAddIn/App.config
@@ -3,6 +3,7 @@
   <appSettings>
     <add key="R_HOME" value="D:\R\R-4.3.1" />
     <add key="R_PATH" value="D:\R\R-4.3.1\bin\x64" />
+    <add key="packages" value="tidyverse;dplyr;forecast"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
