--- a/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
+++ b/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
@@ -53,7 +53,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExcelR.cs" />
+    <Compile Include="Forecast.cs" />
+    <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regression.cs" />
     <Compile Include="RibbonController.cs" />
     <Compile Include="TaskPaneManager.cs" />
     <Compile Include="TypeConversion.cs" />
@@ -76,5 +79,6 @@
       <Name>REnvironmentControlLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
