--- a/REnvironmentControlLibrary/REnvironmentControlLibrary.csproj
+++ b/REnvironmentControlLibrary/REnvironmentControlLibrary.csproj
@@ -29,9 +29,15 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,6 +46,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="UIAutomationProvider" />
+    <Reference Include="WindowsBase" />
+    <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FormEnvironmentSettings.cs">
@@ -48,22 +57,44 @@
     <Compile Include="FormEnvironmentSettings.Designer.cs">
       <DependentUpon>FormEnvironmentSettings.cs</DependentUpon>
     </Compile>
-    <Compile Include="REnvironmentControl.cs">
+    <Compile Include="Models\Environment.cs" />
+    <Compile Include="REnvironmentControlHost.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="REnvironmentControl.Designer.cs">
-      <DependentUpon>REnvironmentControl.cs</DependentUpon>
+    <Compile Include="REnvironmentControlHost.Designer.cs">
+      <DependentUpon>REnvironmentControlHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\DelegateCommand.cs" />
+    <Compile Include="Utils\PropertyChangedBase.cs" />
+    <Compile Include="Views\REnvironmentPanel.xaml.cs">
+      <DependentUpon>REnvironmentPanel.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ViewModel\EnvironmentViewModel.cs" />
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="FormEnvironmentSettings.resx">
       <DependentUpon>FormEnvironmentSettings.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="REnvironmentControl.resx">
-      <DependentUpon>REnvironmentControl.cs</DependentUpon>
+    <EmbeddedResource Include="REnvironmentControlHost.resx">
+      <DependentUpon>REnvironmentControlHost.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.manifest" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\REnvironmentPanel.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Assets\error.png" />
+    <Resource Include="Assets\information.png" />
+    <Resource Include="Assets\warning.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
