--- a/RScriptAddIn/RScriptAddIn/RScriptAddIn.csproj
+++ b/RScriptAddIn/RScriptAddIn/RScriptAddIn.csproj
@@ -181,6 +181,7 @@
     <EmbeddedResource Include="ToolRibbon.resx">
       <DependentUpon>ToolRibbon.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
