--- a/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
+++ b/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
@@ -81,4 +81,7 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)" "$(SolutionDir)Publish\ExcelRAddIn" /s /e</PostBuildEvent>
+  </PropertyGroup>
 </Project>
