--- a/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
+++ b/ExcelRAddIn/ExcelRAddIn/ExcelRAddIn.csproj
@@ -82,6 +82,6 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(TargetDir)" "$(SolutionDir)Publish\ExcelRAddIn" /s /e</PostBuildEvent>
+    <PostBuildEvent>xcopy "$(TargetDir)" "$(SolutionDir)Publish\ExcelRAddIn\" /s /e /y</PostBuildEvent>
   </PropertyGroup>
 </Project>
