--- a/REnvironmentControlLibrary/REnvironmentControlLibrary.csproj
+++ b/REnvironmentControlLibrary/REnvironmentControlLibrary.csproj
@@ -36,6 +36,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -51,17 +52,17 @@
     <Reference Include="WindowsFormsIntegration" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormCreatePlot.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormCreatePlot.Designer.cs">
-      <DependentUpon>FormCreatePlot.cs</DependentUpon>
-    </Compile>
     <Compile Include="FormEnvironmentSettings.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FormEnvironmentSettings.Designer.cs">
       <DependentUpon>FormEnvironmentSettings.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormGeomSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormGeomSettings.Designer.cs">
+      <DependentUpon>FormGeomSettings.cs</DependentUpon>
     </Compile>
     <Compile Include="FormPlotSettings.cs">
       <SubType>Form</SubType>
@@ -69,11 +70,23 @@
     <Compile Include="FormPlotSettings.Designer.cs">
       <DependentUpon>FormPlotSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\AestheticSettings.cs" />
+    <Compile Include="Models\CoordSettings.cs" />
     <Compile Include="Models\Environment.cs" />
-    <Compile Include="Models\GeomSettings.cs" />
+    <Compile Include="Models\FacetWrapSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomAblineSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomBoxplotSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomDotplotSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomHlineSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomSettings.cs" />
+    <Compile Include="Models\BasicSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomLineSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomPointSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomSmoothSettings.cs" />
+    <Compile Include="Models\GeomSettings\GeomVlineSettings.cs" />
     <Compile Include="Models\Params.cs" />
-    <Compile Include="Models\Plot.cs" />
     <Compile Include="Models\DataSettings.cs" />
+    <Compile Include="Models\ScaleSettings.cs" />
     <Compile Include="Models\Settings.cs" />
     <Compile Include="Models\LabelSettings.cs" />
     <Compile Include="Models\ThemeSettings.cs" />
@@ -84,6 +97,7 @@
       <DependentUpon>REnvironmentControlHost.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeConverters\BoolConverter.cs" />
     <Compile Include="Utils\DelegateCommand.cs" />
     <Compile Include="Utils\PropertyChangedBase.cs" />
     <Compile Include="ViewModel\PlotViewModel.cs" />
@@ -94,11 +108,11 @@
     <Service Include="{94E38DFF-614B-4cbd-B67C-F211BB35CE8B}" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="FormCreatePlot.resx">
-      <DependentUpon>FormCreatePlot.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="FormEnvironmentSettings.resx">
       <DependentUpon>FormEnvironmentSettings.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormGeomSettings.resx">
+      <DependentUpon>FormGeomSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormPlotSettings.resx">
       <DependentUpon>FormPlotSettings.cs</DependentUpon>
