Updated REnvironmentControlLibrary with new icons, improved colour scheme. Updated the RibbonController to use the new Office365 icons.

--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ FodyWeavers.xsd
 .Rproj.user
 /Project Notes.txt
 ggplot2 notes.txt
+/ExcelRAddIn/ExcelRAddIn/Docs/Menu Driven Data Science.txt
+ggplot2 notes.txt
