Update the README with the latest features.

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,4 @@ FodyWeavers.xsd
 ggplot2 notes.txt
 /ExcelRAddIn/ExcelRAddIn/Docs/Menu Driven Data Science.txt
 ggplot2 notes.txt
+Parameter notes.txt
