Add documents to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -363,7 +363,6 @@ MigrationBackup/
 FodyWeavers.xsd
 .Rproj.user
 /Project Notes.txt
-ggplot2 notes.txt
 /ExcelRAddIn/ExcelRAddIn/Docs/Menu Driven Data Science.txt
-ggplot2 notes.txt
-Parameter notes.txt
+/ggplot2 notes.txt
+/Parameter notes.txt
