--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ FodyWeavers.xsd
 /ExcelRAddIn/ExcelRAddIn/Docs/Menu Driven Data Science.txt
 /ggplot2 notes.txt
 /Parameter notes.txt
+/Office365 AddIns Project Notes.txt
+/Roadmap.txt
