--- a/Publish/ExcelRAddIn/ExcelRAddIn-AddIn64.xll.config
+++ b/Publish/ExcelRAddIn/ExcelRAddIn-AddIn64.xll.config
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="R_HOME" value="D:\R\R-4.4.2" />
-    <add key="R_PATH" value="D:\R\R-4.4.2\bin\x64" />
-    <add key="packages" value="tidyverse;dplyr;forecast;ggplot2;ggthemes;stats" />
+    <add key="R_HOME" value="D:\R\R-4.5.1" />
+    <add key="R_PATH" value="D:\R\R-4.5.1\bin\x64" />
+    <add key="packages" value="tidyverse;dplyr;forecast;ggplot2;ggthemes"/>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
