--- a/RScriptAddIn/RScriptAddIn/RScriptAddIn.csproj
+++ b/RScriptAddIn/RScriptAddIn/RScriptAddIn.csproj
@@ -34,8 +34,8 @@
     <PublishUrl>D:\Development\Projects\C#\Office\Office365 AddIns\Publish\RScriptAddIn\</PublishUrl>
     <InstallUrl />
     <TargetCulture>en</TargetCulture>
-    <ApplicationVersion>1.0.0.4</ApplicationVersion>
-    <AutoIncrementApplicationRevision>true</AutoIncrementApplicationRevision>
+    <ApplicationVersion>1.0.0.0</ApplicationVersion>
+    <AutoIncrementApplicationRevision>false</AutoIncrementApplicationRevision>
     <UpdateEnabled>true</UpdateEnabled>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>days</UpdateIntervalUnits>
