Ignore temporary key

--- a/.gitignore
+++ b/.gitignore
@@ -372,3 +372,4 @@ FodyWeavers.xsd
 /Notes/Parameter notes.txt
 /Notes/Project Notes.txt
 /Notes/Project Notes.md
+/RScriptAddIn/RScriptAddIn/RScriptAddIn_TemporaryKey.pfx
